# advent_of_code_2025

./: .gitattributes  README.md  pyproject.toml
input/: .gitignore  input_day_10_complete.txt  input_day_11_complete.txt  input_day_12_complete.txt  input_day_1_complete.txt  input_day_1_example.txt  input_day_5_complete.txt  input_day_6_complete.txt  input_day_8_complete.txt
src/: day_01.py  day_02.py  day_05.py  day_06.py  day_07.py  day_08.py  day_1.py  day_10.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
web_solutions/: 20251223_AoC 2025 Advent of Code (Python) ｜ coeleveld.com.html  coeleveld_day_05.py  coeleveld_day_06.py  coeleveld_day_08.py  coeleveld_day_10.py  coeleveld_day_10_global_import.py  coeleveld_day_11.py  coeleveld_day_12.py
